--- a/src/less/partials/base.less
+++ b/src/less/partials/base.less
@@ -72,6 +72,6 @@ figure {
     margin-bottom: (4 * @rhythmUnit);
 } // #wrapper
 
-.flexslider {
+body {
     .fixTransitionFlicker();
 }
